force-app/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <label>Item do Pedido</label>
    <nameField>
        <label>Nome de Item do Pedido</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>