force-app/main/default/objects/OrderItem__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Itens do Pedido</relationshipLabel>
    <relationshipName>Itens_do_Pedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>