force-app/main/default/objects/OrderItem__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens do Pedido</relationshipLabel>
    <relationshipName>Itens_do_Pedido</relationshipName>
    <type>Lookup</type>
</CustomField>