force-app/main/default/objects/OrderItem__c/fields/valorItem__c.field-meta.xml
<CustomField>
    <fullName>valorItem__c</fullName>
    <label>Valor do Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>